# OI-sprawdzarka

./: Cargo.toml  README.md
src/: main.rs
